syntax = "proto3";
package types;

message TransactionWrapper {
    bytes transactionVersion = 1;
    bytes transaction = 2;
}
